# hailatgh.github.io

./: .gitignore  CV.md  DEC_30_TUE_CV.md  README.md  convert_cv.py  generate_pdf.py  index.html  main.py  pyproject.toml  style.css
.github/workflows/: deploy.yml
assets/: CV.md
src/: main.html
tools/cv_generator/: main.py  pyproject.toml
tools/cv_generator/docs/: CV.md
tools/cv_generator/src/: main.html  styles.css
tools/cv_generator/static/: main.html
