[project]
name = "cv"
version = "0.1.0"
description = ""
authors = [
    {name = "Hailemichael Atrsaw",email = "hailemichael.atrsaw2@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "markdown-pdf (>=1.13.1,<2.0.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "weasyprint (>=68.1,<69.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
