[project]
name = "cv_generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Hailemichael Atrsaw",email = "hailemichael.atrsaw2@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "weasyprint (>=68.1,<69.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
